wip: 27.12.2025 18:13 (fixed spacings in waybar)

--- a/themes/fullblack/config/waybar/style/style.css
+++ b/themes/fullblack/config/waybar/style/style.css
@@ -19,7 +19,7 @@ tooltip {
 }
 
 #network {
-	margin: 0 16px;
+	margin: 0 16px 0 0;
 	transition: none;
 	color: @primary;
 	background: none;
@@ -59,11 +59,6 @@ tooltip {
 	color: @primary;
 }
 
-#tray {
-	margin: 0 16px;
-	color: @primary;
-}
-
 #custom-launcher {
 	margin: 0 16px;
     	color: @primary;
@@ -83,7 +78,6 @@ tooltip {
 	color: inherit;
 	box-shadow: inherit;
 }
-
 
 #workspaces button:hover {
 	padding-top: 10px;
